[package]
name = "mfa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
totp-rs = "~0.6"
postgres = { version = "0.19.1", features = ["with-chrono-0_4", "with-uuid-0_8"] }
chrono = "0.4.19"
uuid = "0.8.2"
